# agent-os

./: .gitignore  .gitpod.yml  AGENTS.md  ANNOUNCEMENT_MATERIALS.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_VIDEO_SCRIPT.md  DUAL_LOOP_ARCHITECTURE.md  ENHANCED_FEATURES.md  ENHANCED_FEATURES_OLD.md  FINAL_SUMMARY.md  GOVERNANCE.md  IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_OLD.md  INNOVATION_LAYER.md  MANIFEST.in  NEW_FEATURES.md  PAPER_READINESS_SUMMARY.md  PHASE3_SUMMARY.md  PRAGMATIC_TRUTH.md  PRIORITIZATION_FRAMEWORK.md  PUBLICATION_READINESS.md  PUBLISHING_INSTRUCTIONS.md  README.md  RESEARCH.md  RESTRUCTURING_SUMMARY.md  SECURITY.md  SECURITY_UPDATES.md  THREE_FAILURE_TYPES.md  V2_STEEL_MAN_IMPLEMENTATION.md  __init__.py  agent-specification.md  agent.py  build_and_publish.sh  cli.py  config_examples.py  control_plane.py  (+29 more)
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security_vulnerability.yml
.github/workflows/: ci.yml  docker-build.yml  lint.yml  publish.yml  python-package.yml
agent_kernel/: __init__.py  analyzer.py  completeness_auditor.py  detector.py  kernel.py  models.py  nudge_mechanism.py  outcome_analyzer.py  patcher.py  semantic_analyzer.py  semantic_purge.py  simulator.py
agents/: accessibility-agent.md  design-review-agent.md  dri-report-agent.md  fun-report-agent.md  onboarding-agent.md  planning-agent.md  productivity-agent.md  release-freshness-agent.md  s360-agent.md  sfi-agent.md  sre-agent.md  unit-and-scenario-testing-agent.md  zero-production-touch.md
agents/deployment/: README.md
agents/design/: README.md
agents/development/: README.md
agents/monitoring/: README.md
agents/planning/: README.md
agents/templates/: AGENT_TEMPLATE.md
agents/testing/: README.md
amb_core/: __init__.py  bus.py  models.py  tracing.py
atr/: __init__.py  decorator.py  hf_utils.py  schema.py
benchmarks/: README.md  statistical_tests.py  verify_sample_corpus.py
benchmarks/results/: README.md
caas/: conversation.py  models.py  pragmatic_truth.py  triad.py
caas/api/: server.py
caas/storage/: store.py
copilot-extension/: README.md  package.json
copilot-extension/src/: auditLogger.ts  copilotExtension.ts  index.ts
docs/: AAIF_PROPOSAL.md  ABLATION_STUDIES.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS_RESPONSE.md  CONTEXT_TRIAD.md  CONTRIBUTING.md  ECOSYSTEM_STATUS.md  ETHICS_AND_LIMITATIONS.md  HEURISTIC_ROUTER.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CONTEXT_TRIAD.md  IMPLEMENTATION_SUMMARY_HEURISTIC_ROUTER.md  IMPLEMENTATION_SUMMARY_METADATA_INJECTION.md  IMPLEMENTATION_SUMMARY_PRAGMATIC_TRUTH.md  IMPLEMENTATION_SUMMARY_TRUST_GATEWAY.md  KERNEL_V1_RELEASE.md  LANGCHAIN_INTEGRATION.md  LIMITATIONS.md  METADATA_INJECTION.md  PRD_V2_SUMMARY.md  PYPI_SETUP.md  README.md  RELATED_WORK.md  RELEASE_CHECKLIST.md  RELEASE_v1.1.0.md  SCAK_V2.md  SLIDING_WINDOW.md  STRUCTURE_AWARE_INDEXING.md  SUMMARY.md  TESTING.md  THREAT_MODEL.md  TRUST_GATEWAY.md  architecture.md  faq.md  index.md  quickstart.md
docs/architecture/: architecture.md
docs/benchmarks/: README.md  amb-benchmarks.md  cmvk-benchmarks.md
docs/case-studies/: cmvk-carbon-fraud.md
docs/community/: ANNOUNCEMENT_TEMPLATES.md
docs/guides/: PHILOSOPHY.md  QUICKSTART.md
emk/: indexer.py  schema.py  sleep_cycle.py  store.py
examples/: README.md  basic_example.py  client.py  demo.py  demo_context_triad.py  demo_conversation_manager.py  demo_heuristic_router.py  demo_innovation_layer.py  demo_metadata_injection.py  demo_pragmatic_truth.py  demo_rbac.py  demo_structure_aware.py  demo_time_decay.py  demo_trust_gateway.py  dual_loop_demo.py  enhanced_features_demo.py  example_silent_signals.py  interactive_tutorial.ipynb  langchain_integration_example.py  partner_level_demo.py  production_features_demo.py  quick_demo.py  run_sidecar.py  scak_v2_demo.py  three_failure_types_demo.py  tracing_demo.py  verify_architecture.py
examples/carbon-auditor/: README.md  demo_audit.py  pyproject.toml
examples/carbon-auditor/docs/: PRD-Dependency-Gaps.md
examples/carbon-auditor/src/: __init__.py  tools.py
examples/carbon-auditor/src/agents/: auditor_agent.py  base.py  claims_agent.py  geo_agent.py
examples/carbon-auditor/src/carbon_auditor_swarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
experiments/: README.md  agent_comparison_50runs.csv  ambiguity_test_results_50runs.csv  blind_spot_benchmark.py  context_efficiency_test.py  efficiency_curve.py  latent_state_scenario.py  laziness_benchmark.py  long_horizon_purge.py  long_horizon_task_experiment.py  multi_agent_rag.py  multi_agent_rag_experiment.py  reproduce_results.py  results.json  run_comprehensive_ablations.py  run_extended_experiment.py  sabotage_stress_test.py  test_prosecutor.py
iatp/: __init__.py  attestation.py  cli.py  hf_utils.py  policy_engine.py  recovery.py
notebooks/: getting_started.ipynb
paper/: CHECKLIST.md  LLM_DISCLOSURE.md  PAPER_CHECKLIST.md  README.md  abstract.md  build_pdf.py  cmvk_neurips.aux  cmvk_neurips.bbl  cmvk_neurips.blg  cmvk_neurips.out  cmvk_neurips.tex  draft_main.md  experiments.md  generate_figures.py  main.tex  main_anonymous_arxiv.aux  main_anonymous_arxiv.bbl  main_anonymous_arxiv.blg  main_anonymous_arxiv.tex  method.md  neurips_2024.sty  references.bib  references_anon.bib  structure.tex  whitepaper.md
reproducibility/: README.md  commands.md  hardware_specs.md  requirements_frozen.txt  run_all_experiments.sh  seeds.json
scripts/: prepare_pypi.py  quickstart.ps1
src/: __init__.py  kernel.py
tests/: test_bus.py  test_context_triad.py  test_coverage_boost.py  test_decoupled.py  test_dual_loop.py  test_governance.py  test_humaneval_loader.py  test_integrations.py  test_kernel_interception.py  test_lateral_thinking_witness.py  test_models.py  test_new_features.py  test_pragmatic_truth.py  test_prosecutor_mode.py  test_silent_signals.py  test_time_decay.py  test_tracing.py
(+124 files in other folders)
