[project]
name = "carbon-auditor-swarm"
version = "0.2.0"
description = "Autonomous auditing system for the Voluntary Carbon Market (VCM)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Upgraded dependencies with new features (Jan 2026)
    "agent-control-plane>=1.2.0",  # Health checks, auto-recovery, scaling
    "amb-core>=0.2.0",              # Persistence, DLQ, schema validation, tracing
    "cmvk>=0.2.0",                  # Euclidean distance, threshold profiles, audit trail
    "agent-tool-registry>=0.2.0",  # Public API, versioning, retry, rate limiting
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]